# opengl_framework

./: .gitignore  CMakeLists.txt  README.md
src/: .tutorial01.cpp.swp  CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  textartdialog.cpp  textartdialog.h
src/gui/: CMakeLists.txt  camera_view_widget.cpp  camera_view_widget.h  gl_widget.cpp  gl_widget.h  monitor_window.cpp  monitor_window.h  opengl_widget.cpp  opengl_widget.h  status_widget.cpp  status_widget.h  textartinterface.h  viewer_widget.cpp  viewer_widget.h
src/plugins/: .extraeffectsplugin.h.swo  CMakeLists.txt  basiceffectsplugin.cpp  basiceffectsplugin.h  extraeffectsplugin.cpp  extraeffectsplugin.h
