file(GLOB QT_FORMS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ./*.ui)
file(GLOB QT_RESOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ./resources/*.qrc)
file(GLOB_RECURSE GUI_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS ./*.h)
file(GLOB_RECURSE GUI_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS ./*.cpp)

QT4_ADD_RESOURCES(QT_RESOURCES_CPP ${QT_RESOURCES})
QT4_WRAP_UI(QT_FORMS_HPP ${QT_FORMS})
QT4_WRAP_CPP(QT_MOC_GUI ${GUI_HEADERS})

add_library(gui ${QT_MOC_GUI} ${GUI_SOURCES})
